# novita-cli

./: .gitignore  CHANGELOG.md  LICENSE  NOVITA.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
cli_anything/novita/: README.md  novita_cli.py
cli_anything/novita/core/: client.py
cli_anything/novita/skills/: SKILL.md
cli_anything/novita/tests/: TEST.md  test_core.py  test_full_e2e.py
cli_anything/novita/utils/: output.py
cnovita/skills/: SKILL.md
novita_cli/: README.md  __init__.py  novita_cli.py
novita_cli/tests/: test_core.py  test_full_e2e.py
skills/: SKILL.md
skills/examples/: easy-image-usage-examples.md
skills/references/: commands.md  endpoints.md
skills/references/easy-image/: model-selection.md
