[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novita-cli"
version = "0.3.0"
description = "CLI for major Novita AI APIs - LLM, images, video, audio, GPU, serverless"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Novita Labs" },
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/novitalabs/novita-cli"
Repository = "https://github.com/novitalabs/novita-cli"
Changelog = "https://github.com/novitalabs/novita-cli/blob/main/CHANGELOG.md"

[project.scripts]
novita = "novita_cli.novita_cli:main"

[tool.setuptools.packages.find]
include = ["novita_cli", "novita_cli.*"]
exclude = ["novita_cli.tests", "novita_cli.tests.*"]

[tool.pytest.ini_options]
testpaths = ["novita_cli/tests"]
